@@ -14,6 +14,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Add "group name" concept to Phoromatic group of accounts
 - phoromatic: Improved formatting of the public-viewer page
 - phoromatic: Allow downloading results as PDF
+- phoromatic: Allow disabling new account registration by setting custom string via rootadmin's config page
 
 Phoronix Test Suite 5.6 Milestone 1
 13 January 2015
